--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,51 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-              rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-              crossorigin="anonymous" >
-
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-                integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
-                crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-                integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
-                crossorigin="anonymous"></script>
-
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet">
+        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-{#            {{ encore_entry_link_tags('app') }}#}
+         
         {% endblock %}
 
         {% block javascripts %}
-{#            {{ encore_entry_script_tags('app') }}#}
+        
         {% endblock %}
     </head>
     <body>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
+    <div class="collapse navbar-collapse" id="mobile-nav">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+            <a href="{{path('homepage')}}" class="nav-link">
+                Home
+            </li>
+            </a>
+            <li class="nav-item">
+            <a href="{{path('app_user_index')}}"class="nav-link">
+                Crud User
+            </a>
+            </li>
 
-    <nav>
-        <ul>
-            <li>
-                <a href="/">
-                    home
-                </a>
-            </li>
-            <li>
-                <a href="{{ url('app_user_index') }}">
-                    CRUD User
-                </a>
-            </li>
+            
+            
+             {% if app.user %}
+                  <div class="mb-3">
+                   You are logged in as {{ app.user.name }}, <a href="{{ path('app_logout') }}">Logout</a>
+                  </div>
+             {% endif %}
         </ul>
     </nav>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    {% block body %}{% endblock %}
-                </div>
-            </div>
-        </div>
-
+        {% block body %}{% endblock %}
     </body>
 </html>
