--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,12 @@
     <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
         <div class="collapse navbar-collapse" id="mobile-nav">
             <ul class="navbar-nav ml-auto">
+
         <ul>
+            <style>
+
+
+            </style>
             <li>
                 <a href="{{path('homepage')}}" class="nav-link">
                     home
