--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
-    {% block title %}My Great Website - home page{% endblock %}
-    {% block body %}
-        <h1>Home page</h1>
-        <p>
-            welcome to my great website !
-        </p>
-    {% endblock %}
+
+{% block title %}Hello DefaultController!{% endblock %}
+
+{% block body %}
+<h1> Welcome to the home page</h1>
+    <P>Welcome</P>
+{% endblock %}
