--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,8 +1,12 @@
 {% extends 'base.html.twig' %}
+    {% block title %}Phone Bid Site - home page{% endblock %}
+    {% block body %}
+        <h1>Welcome to our Phone Bidding Website</h1>
+        <p>
+            To start bidding please create an account and login.
 
-{% block title %}Hello DefaultController!{% endblock %}
+        </p>
 
-{% block body %}
-<h1> Welcome to the home page</h1>
-    <P>Welcome</P>
-{% endblock %}
+
+
+    {% endblock %}
