--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,12 +1,8 @@
 {% extends 'base.html.twig' %}
-    {% block title %}Phone Bid Site - home page{% endblock %}
+    {% block title %}My Great Website - home page{% endblock %}
     {% block body %}
-        <h1>Welcome to our Phone Bidding Website</h1>
+        <h1>Home page</h1>
         <p>
-            To start bidding please create an account and login.
-
+            welcome to my great website !
         </p>
-
-
-
     {% endblock %}
