--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,70 +25,35 @@
     </head>
     <body>
 
-
-    <nav class = "navbar navbar-expand-sm navbar-dark bg-primary mb-3">
-        <div class = "collapse navbar-collapse" id="mobile.nav">
-            <ul clas="navbar-nav ml-auto">
-
-            <style>
-                body{
-                    background-color: antiquewhite;
-                }
-                nav {
-                    text-align: center;
-                    margin: 20px 0 0 ;
-                    padding: 10px 0;
-                }
-
-                nav ul{
-                    list-style: none;
-                    margin: 0 2px;
-                    padding: 0;
-                }
-
-                nav li {
-                    display: inline-block;
-                    padding: 10px 65px;
-                }
-
-                nav a {
-                    font-weight: normal;
-                    padding: 10px 10px;
-                    font-size: 1.5em;
-                }
-            </style>
-
+    <nav>
+        <ul>
             <li>
-                <a href="/" style = "color:#FFFFFF" >
-                    Home Page
-
-                </a>
-            </li>
-
-            <li>
-                <a href="{{ url('app_make_index') }}" style = "color:#FFFFFF" >
-                    CRUD make
+                <a href="/">
+                    home
                 </a>
             </li>
             <li>
-                <a href="{{ url('app_phone_index') }}" style = "color:#FFFFFF">
-                    Phones
+                <a href="{{ url('app_product_index') }}">
+                    Products Listingss
                 </a>
             </li>
-                <li>
-                    <a href = "/user" style = "color:#FFFFFF">
-                        Login
-                     </a>
-                </li>
-
-                <li>
-                    <a href = "/bid" style = "color:#FFFFFF">
-                        Bid Status
-                    </a>
-                </li>
+            <li>
+                <a href="{{ url('app_make_comment_index') }}">
+                    Forum
+                </a>
+            </li>
+            <li>
+                <a href="{{ url('app_shipping_details_index') }}">
+                    Shipping Details
+                </a>
+            </li>
+            <li>
+                <a href="/user">
+                    Login
+                </a>
+            </li>
         </ul>
     </nav>
-
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
