--- a/templates/bid/show.html.twig
+++ b/templates/bid/show.html.twig
@@ -12,12 +12,16 @@
                 <td>{{ bid.id }}</td>
             </tr>
             <tr>
-                <th>BidStatus</th>
-                <td>{{ bid.bidStatus }}</td>
+                <th>Date</th>
+                <td>{{ bid.Date }}</td>
             </tr>
             <tr>
-                <th>BidAmount</th>
-                <td>{{ bid.bidAmount }}</td>
+                <th>Status</th>
+                <td>{{ bid.Cancel }}</td>
+            </tr>
+            <tr>
+                <th>Time</th>
+                <td>{{ bid.Time }}</td>
             </tr>
         </tbody>
     </table>
