--- a/templates/phone/index.html.twig
+++ b/templates/phone/index.html.twig
@@ -11,10 +11,7 @@
                 <th>Id</th>
                 <th>Model</th>
                 <th>Memory</th>
-                <th>OSType</th>
-                <th>Price</th>
                 <th>Manufacturer</th>
-
                 <th>actions</th>
             </tr>
         </thead>
@@ -24,10 +21,6 @@
                 <td>{{ phone.id }}</td>
                 <td>{{ phone.Model }}</td>
                 <td>{{ phone.memory }}</td>
-                <td>{{ phone.OSType }}</td>
-                <td>{{ phone.Price }}</td>
-
-
                 <td>
                     <a href="{{ path('app_make_show', {'id': phone.manufacturer.id}) }}">{{ phone.manufacturer.name }}</a>
 
@@ -36,6 +29,7 @@
                 <td>
                     <a href="{{ path('app_phone_show', {'id': phone.id}) }}">show</a>
                     <a href="{{ path('app_phone_edit', {'id': phone.id}) }}">edit</a>
+                    <a href="{{ path('app_bid_new', {'id': phone.id}) }}">bid</a>
                 </td>
             </tr>
         {% else %}
