--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -34,6 +34,8 @@
         {% endfor %}
         </tbody>
     </table>
-
+    <button class="btn btn-lg btn-primary" type="submit">
+        <a href="{{ path('app_logout') }}">Logout</a>
+    </button>
     <a href="{{ path('app_user_new') }}">Create new</a>
 {% endblock %}
