--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,8 @@
                 integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
                 crossorigin="anonymous"></script>
 
+        <link rel="stylesheet" href="/styles/app.css">
+
         {% block stylesheets %}
 {#            {{ encore_entry_link_tags('app') }}#}
         {% endblock %}
@@ -25,62 +27,88 @@
     </head>
     <body>
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
-        <div class="collapse navbar-collapse" id="mobile-nav">
-            <ul class="navbar-nav ml-auto">
 
-        <ul>
+    <nav class = "navbar navbar-expand-sm navbar-dark bg-primary mb-3">
+        <div class = "collapse navbar-collapse" id="mobile.nav">
+            <ul clas="navbar-nav ml-auto">
+
             <style>
+                body{
+                    background-color: white;
+                }
+                nav {
+                    text-align: center;
+                    margin: 0px 0 0 ;
+                    padding: 10px 0;
+                }
 
+                nav ul{
+                    list-style: none;
+                    margin: 0 2px;
+                    padding: 0;
+                }
+
+                nav li {
+                    display: inline-block;
+                    padding: 10px 65px;
+                }
+
+                nav a {
+                    font-weight: normal;
+                    padding: 10px 10px;
+                    font-size: 1.5em;
 
             </style>
-            <li>
-                <a href="{{path('homepage')}}" class="nav-link">
-                    home
-                </a>
-            </li>
-            {% if is_granted('ROLE_Admin') %}
-            <li>
-                <a href="{{ url('app_make_index') }}"class="nav-link" id="new_admin_link">
-                   Admin
-                </a>
-            </li>
-            {% endif %}
-
 
             <li>
-                <a href="{{ url('app_phone_index') }}"class="nav-link">
-                    phones
+                <a href="/" style = "color:#FFFFFF" >
+                    Home Page
+
                 </a>
             </li>
 
+                <
+            <li>
+                <a href="{{ url('app_make_index') }}" style = "color:#FFFFFF" >
+                    CRUD make
+                </a>
+            </li>
+            <li>
+                <a href="{{ url('app_phone_index') }}" style = "color:#FFFFFF">
+                    Phones
+                </a>
+            </li>
+                <li>
+                    <a href = "/user" style = "color:#FFFFFF">
+                        Login
+                     </a>
+                </li>
 
-            <li>
-                <a href="/user" class="nav-link">
-                    Login
-                </a>
-            </li>
-            <li>
-                <a href="/logout" class="nav-link">
-                    Logout
-                </a>
-            </li>
-            <li>
-                <a href="/bid" class="nav-link">
-                    Bid Status
-                </a>
-
-            </li>
-            </li>
+                <li>
+                    <a href = "/bid" style = "color:#FFFFFF">
+                        Bid Status
+                    </a>
+                </li>
         </ul>
     </nav>
+
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    {% block body %}{% endblock %}
+                    {% block body %}
+
+                    {% endblock %}
                 </div>
             </div>
         </div>
+
+<div class ="movingImages">
+    <img src="{{ asset('images/phones.jpg') }}" alt="" >
+
+
+    </div>
+
+
 
     </body>
 </html>
