--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,8 +1,13 @@
 {% extends 'base.html.twig' %}
+    {% block title %}Phone Bid Site - home page{% endblock %}
+    {% block body %}
+        <h1> 📱 Welcome to our Phone Bidding Website</h1>
+        <h4> To start bidding please create an account and login.    </h4>
+        <br>
+        <br>
+        <h6> 🔥The Smart Phones that are featured on the home page are the trending phones 🔥</h6>
 
-{% block title %}Hello DefaultController!{% endblock %}
 
-{% block body %}
-<h1> Welcome to the home page</h1>
-    <P>Welcome</P>
-{% endblock %}
+
+
+    {% endblock %}
