--- a/templates/phone/index.html.twig
+++ b/templates/phone/index.html.twig
@@ -7,6 +7,15 @@
 
     <table class="table">
         <thead>
+        <style>
+            table, td, tr, th {
+                padding: 0.5rem;
+                margin: 0.5rem;
+            }
+            td {
+                border: solid black 0.1rem;
+            }
+        </style>
             <tr>
                 <th>Id</th>
                 <th>Model</th>
