--- a/templates/product/edit.html.twig
+++ b/templates/product/edit.html.twig
@@ -9,5 +9,7 @@
 
     <a href="{{ path('app_product_index') }}">back to list</a>
 
+    {% if is_granted('ROLE_Admin') %}
     {{ include('product/_delete_form.html.twig') }}
+    {% endif %}
 {% endblock %}
