--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -44,7 +44,11 @@
 
     <a href="{{ path('app_product_index') }}">back to list</a>
 
+    {% if is_granted('ROLE_ADMIN') %}
     <a href="{{ path('app_product_edit', {'id': product.id}) }}">edit</a>
+    {% endif %}
+
+    <a href="{{ path('app_product_edit', {'id': product.id}) }}">Make A Bid!</a>
 
     {{ include('product/_delete_form.html.twig') }}
 {% endblock %}
