--- a/templates/make_comment/show.html.twig
+++ b/templates/make_comment/show.html.twig
@@ -15,6 +15,10 @@
                 <th>MakeComment</th>
                 <td>{{ make_comment.MakeComment }}</td>
             </tr>
+            <tr>
+                <th>MakeReply</th>
+                <td>{{ make_comment.MakeReply }}</td>
+            </tr>
         </tbody>
     </table>
 
