--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -7,10 +7,12 @@
 
     <table class="table">
         <tbody>
+        {% if is_granted('ROLE_ADMIN') %}
             <tr>
                 <th>Id</th>
                 <td>{{ product.id }}</td>
             </tr>
+            {%endif%}
             <tr>
                 <th>ProductName</th>
                 <td>{{ product.productName }}</td>
