--- a/templates/Error/accessDenied.html.twig
+++ b/templates/Error/accessDenied.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 {% block title %}error{% endblock %}
 {% block body %}
-    sorry - access is denied for your request
+    Access Denied - Only admins can access this page!
     <p>
-        <a href="{{ url('homepage') }}">home</a>
+        <a href="{{ url('homepage') }}">Go Back to the site</a>
     </p>
 {% endblock %}
