--- a/templates/shipping_details/index.html.twig
+++ b/templates/shipping_details/index.html.twig
@@ -37,5 +37,7 @@
         </tbody>
     </table>
 
+    {% if is_granted('ROLE_ADMIN') %}
     <a href="{{ path('app_shipping_details_new') }}">Create new</a>
+    {% endif %}
 {% endblock %}
