--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -69,58 +69,35 @@
                 <a href="{{ url('app_product_index') }}"  style = "color:#FFFFFF">
                     Products Listings
                 </a>
-            </li>
-<<<<<<< HEAD
-
-            <li class="nav-item">
-            <a href="{{path('app_purchase_details_index')}}"class="nav-link">
-                Crud PurchaseDetails
-            </a>
-            </li>
-            <li class="nav-item">
-            <a href="{{path('app_make_comment_index')}}"class="nav-link">
-                Crud Make a Comment
-            </a>
-            </li>
-
-            <li class="nav-item">
-            <a href="{{path('app_bid_index')}}"class="nav-link">
-                Crud Bidding Page
-            </a>
-            </li>
-
-             {% if app.user %}
-                  <div class="mb-3">
-                   You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-                  </div>
-             {% endif %}
-=======
->>>>>>> 41303353db1a2eba253f074c01e9cfcf8699c528
+            </li
             <li>
                 <a href="{{ url('app_make_comment_index') }}"  style = "color:#FFFFFF">
                     Forum
                 </a>
             </li>
             <li>
+            {% if app.user %}
                 <a href="{{ url('app_shipping_details_index') }}"  style = "color:#FFFFFF">
                     Shipping Details
                 </a>
+            {% endif %}
             </li>
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                 <li>
-                    <a href="{{ url('app_logout') }}" style = "color:#FFFFFF">logout</a>
+                     <div class="mb-3">
+                     You are logged in as {{ app.user.username }}, <a href="{{ url('app_logout') }}" style = "color:#FFFFFF">logout</a>
+                    </div>
                 {% else %}
                     <a href="{{ url('app_login') }}" style="color:#FFFFFF">login</a>
                 {% endif %}
                 </li>
 
-<<<<<<< HEAD
                 <li>
                     <a href = "/bid" style = "color:#FFFFFF">
                         Bid Status
                     </a>
                 </li>
-=======
+
             {% if is_granted('ROLE_ADMIN') %}
             <li>
                 <a href="{{ path('app_login') }}" style = "color:#FFFFFF">
@@ -128,8 +105,6 @@
                 </a>
             </li>
             {% endif %}
-
->>>>>>> 41303353db1a2eba253f074c01e9cfcf8699c528
         </ul>
     </nav>
         <div class="container">
