--- a/templates/shipping_details/index.html.twig
+++ b/templates/shipping_details/index.html.twig
@@ -11,7 +11,10 @@
                 <th>Id</th>
                 <th>ProductName</th>
                 <th>Price</th>
+                <th>Phone</th>
+                <th>Email</th>
                 <th>Address</th>
+                <th>Product</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -21,7 +24,10 @@
                 <td>{{ shipping_detail.id }}</td>
                 <td>{{ shipping_detail.productName }}</td>
                 <td>{{ shipping_detail.price }}</td>
+                <td>{{ shipping_detail.phone }}</td>
+                <td>{{ shipping_detail.email }}</td>
                 <td>{{ shipping_detail.address }}</td>
+                <td>{{ shipping_detail.product }}</td>
                 <td>
                     <a href="{{ path('app_shipping_details_show', {'id': shipping_detail.id}) }}">show</a>
                     <a href="{{ path('app_shipping_details_edit', {'id': shipping_detail.id}) }}">edit</a>
@@ -29,13 +35,11 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                <td colspan="8">no records found</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    {% if is_granted('ROLE_ADMIN') %}
     <a href="{{ path('app_shipping_details_new') }}">Create new</a>
-    {% endif %}
 {% endblock %}
