--- a/templates/shipping_details/show.html.twig
+++ b/templates/shipping_details/show.html.twig
@@ -12,12 +12,8 @@
                 <td>{{ shipping_detail.id }}</td>
             </tr>
             <tr>
-                <th>ProductName</th>
-                <td>{{ shipping_detail.productName }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ shipping_detail.price }}</td>
+                <th>Name</th>
+                <td>{{ shipping_detail.name }}</td>
             </tr>
             <tr>
                 <th>Phone</th>
@@ -34,6 +30,10 @@
             <tr>
                 <th>Product</th>
                 <td>{{ shipping_detail.product }}</td>
+            </tr>
+            <tr>
+                <th>Price</th>
+                <td>{{ shipping_detail.price }}</td>
             </tr>
         </tbody>
     </table>
